Domibus 5.0
- Update all libraries to the latest version: Apache CXF 3.4.0, Ehcache 3.8.1, Hibernate Validator 6.1.5.Final, ActiveMQ 5.16.0, etc
Domibus 4.2
- Added a new property domibus.logging.metadata.print - prints the AS4 metadata in the logs when org.apache.cxf is set to at least INFO in logback.xml. Defaults to true.
- Deprecated the following classes/methods:
    - eu.domibus.plugin.NotificationListener
    - eu.domibus.plugin.NotificationListenerService
    - eu.domibus.submission.WeblogicNotificationListenerService
    - eu.domibus.ext.services.DomibusPropertyManagerExt.setKnownPropertyValue(java.lang.String, java.lang.String, java.lang.String)
    - eu.domibus.ext.services.PModeExtService.updatePModeFile(byte[], java.lang.String)
- Use Domibus nested property mechanism for DSS dynamic properties for constraints and custom trusted list
- Possibility to change some DSS extension properties at runtime
- Possibility to define a higher priority for specific messages to be sent
- New isAlive RestService in DomibusCore to add to E2E Monitoring
- Possibility to monitor the connection state between C2 and C3
- API for adding/updating participants
- Extend the retention policy mechanism
- Domibus Support of Open JDK 11
- Default JMS Plugin – different queues depending on service/action
- Upgrade Wildfly to version 20 and dropped support for Wildfly 12 (incompatibilities in the new Artemis 2.x client API)
- UI page for changing the Domibus properties at runtime
- Naming convention of the metrics has changed from upper case metric name to class name.lower case metric name. (EG: OUTGOING_PULL_REQUEST_timer is now named eu.domibus.core.message.pull.PullMessageSender.outgoing_pull_request.timer)
- Added DomibusWorkManager within weblogic.xml to avoid using default work manager.
- Added duplicate entities validations in PMode upload.
- Added a job in FS Plugin that cleans orphaned lock files