@@ -756,6 +756,9 @@ domibus.entityManagerFactory.jpaProperty.hibernate.transaction.jta.platform=org.
 # Defaults to limit (6000 bytes)
 #domibus.logging.cxf.limit=6000
 
+#Disables offloading the SSL connection to another application - e.g. SSL Forward Proxy - (defaults to false)
+#domibus.connection.cxf.ssl.offload.enable=false
+
 #The maximum file size in bytes that can be uploaded through REST ( pMode, trustStore)
 #domibus.file.upload.maxSize=10000000
 
