@@ -4,8 +4,14 @@ import eu.domibus.core.ebms3.ws.attachment.AttachmentCleanupInterceptor;
 import org.apache.cxf.Bus;
 import org.apache.cxf.bus.spring.BusExtensionPostProcessor;
 import org.apache.cxf.bus.spring.BusWiringBeanFactoryPostProcessor;
+import org.apache.cxf.service.model.EndpointInfo;
+import org.apache.cxf.ws.addressing.EndpointReferenceType;
+import org.springframework.beans.factory.config.BeanDefinition;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.context.annotation.Scope;
+
+import java.io.IOException;
 
 import static java.util.Collections.singletonList;
 
@@ -38,5 +44,14 @@ public class CxfConfiguration {
     @Bean("org.apache.cxf.bus.spring.BusExtensionPostProcessor")
     public BusExtensionPostProcessor jsr250BeanPostProcessor() {
         return new BusExtensionPostProcessor();
+    }
+
+    @Bean
+    @Scope(BeanDefinition.SCOPE_PROTOTYPE)
+    public DomibusURLConnectionHTTPConduit domibusURLConnectionHTTPConduit(DomibusHttpsURLConnectionFactory domibusHttpsURLConnectionFactory,
+                                                                           Bus bus,
+                                                                           EndpointInfo endpointInfo,
+                                                                           EndpointReferenceType target) throws IOException {
+        return new DomibusURLConnectionHTTPConduit(domibusHttpsURLConnectionFactory, bus, endpointInfo, target);
     }
 }
